# Autoclicker

./: Cargo.toml  README.md
src/: .clicker.rs.swp  .main.rs.swp  clicker.rs  event.rs  input.rs  main.rs
src/event/: .kbd_event.rs.swp  .kbd_event_handler.rs.swp  kbd_event.rs  kbd_event_handler.rs  mod.rs
