[package]
name = "auto-clicker"
version = "0.1.0"
authors = ["ldg"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libxdo     = "0.6.0"
rand_distr = "0.4.0"
rand       = "0.8.3"

#linux headers
libc = "0.2.93"
input-event-codes = "0.2.1"

#threading
threadpool = "1.8.1"
